<resources>
    <string name="app_name">Rcc_NewProject_Mvvm</string>
    <string name="no_internet">No internet</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="crash_toast_text">Oops ! App crashed, but a report has been sent to  developers to help fix the issue !</string>
    <string name="h_fname">* Enter First Name</string>
    <string name="h_lname">* Enter Last Name</string>
    <string name="h_mname">Enter Middle Name</string>
    <string name="h_email">* Enter Email ID</string>
    <string name="email_invalid_val">Please enter the valid email id</string>
    <string name="h_password">* Enter Password</string>
    <string name="h_password_lenght">Password must be minimum 6 characters length</string>
    <string name="v_gender">Please select gender</string>
    <string name="v_postal">Please enter the valid postal code</string>
    <string name="v_number">Please enter the valid phone number</string>
    <string name="h_gender">* Enter Male / Female</string>
    <string name="h_dob">* Enter DOB (mm/dd/yyyy)</string>
    <string name="h_bio">Enter Biography</string>
    <string name="h_username">Enter Username</string>
    <string name="h_age">Enter Age</string>
    <string name="h_number">Enter Number</string>
    <string name="h_number_length">Enter 10 digit Number</string>
    <string name="phone_invalid_val">Please enter the valid phone numner</string>
    <string name="h_c_code">Enter Country Code</string>
    <string name="h_city">Enter City</string>
    <string name="h_postcal_code">Enter Postal Code</string>
    <string name="h_region">Enter Region</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="Submit">Submit</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="please_enter_old_pass">Please enter your old password</string>
    <string name="new_valid">Please Enter New Password</string>
    <string name="confirm_valid">Please Enter Confirm Password</string>
    <string name="match">Old password and new password doesn\'t match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">You are successfully logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_valid_password">Password must be greater than 6 characters</string>
    <string name="reset_password_link_sent">Reset password link sent to your email id</string>
    <string name="password_reset_success">Password reset successfully</string>
    <string name="new_password_empty">Please enter new password</string>
    <string name="confirm_password_empty">Please confirm password</string>
    <string name="password_not_matched"><![CDATA[New Password & Confirm Password are not same]]></string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="enter_phone">Please enter your number</string>
    <string name="enter_valid_phone">Please enter valid number</string>
    <string name="log_out_success">You are logged out successfully</string>
    <string name="password_changed_success">Password changed successfully</string>
</resources>
